--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   flutter_lints: ^5.0.0
+  test: ^1.25.2
+  mocktail: ^1.0.4
+  mocktail_image_network: ^1.2.0
 
 flutter:
   uses-material-design: true
