--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   flutter_timezone: ^4.1.0
   timezone: ^0.9.0
+  intl: ^0.18.0
+  workmanager:
+    git:
+      url: https://github.com/fluttercommunity/flutter_workmanager.git
+      ref: b783000
 
 dev_dependencies:
   flutter_test:
